@@ -7,6 +7,11 @@ if (!defined('TYPO3_MODE')) {ldelim}
 // {$generatedComment}
 // 
 
+if (!is_object($GLOBALS['T3_VARS']['kb_kickstarter_config'])) {ldelim}
+	require_once(PATH_kb_kickstarter.'class.tx_kbkickstarter_config.php');
+	$GLOBALS['T3_VARS']['kb_kickstarter_config'] = t3lib_div::makeInstance('tx_kbkickstarter_config');
+	$GLOBALS['T3_VARS']['kb_kickstarter_config']->init('kb_kickstarter');
+{rdelim}
 $basePath = $GLOBALS['T3_VARS']['kb_kickstarter_config']->get_configExtensionPath();
 
 {foreach from=$tables key=tableIdx item=tableRow}
